<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:text="@string/settings_add_family"
        android:gravity="center"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:text="@string/settings_sure"
            android:gravity="center"
            android:background="@color/color_B559CBD9" />
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/settings_cancel"
            android:gravity="center"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:background="#C2D4EC"
            />

    </LinearLayout>
</LinearLayout>
