<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsChangeDeviceNameActivity"
    android:background="@mipmap/settings_bind_netset_background"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <TextView
        android:id="@+id/change_device_name_cancel"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginLeft="35dp"
        android:text="@string/settings_cancel"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/change_name_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/change_name_tv"
        android:clickable="true"/>

    <TextView
        android:id="@+id/change_name_tv"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@mipmap/settings_main"
        android:gravity="center"
        android:text="@string/settings_device_name"
        android:textColor="#ff00f0ff"
        android:textSize="35dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/change_device_name_sure"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginLeft="920dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:text="@string/settings_sure"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/change_name_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <EditText
        android:id="@+id/edit_device_name"
        android:layout_width="964px"
        android:layout_height="95dp"
        android:layout_marginTop="108dp"
        android:layout_marginLeft="33px"
        android:background="#09ffffff"
        android:textColor="@color/page_dot_selected"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
